--- a/mta.yaml
+++ b/mta.yaml
@@ -1,6 +1,6 @@
 _schema-version: "2.1"
 ID: HANA_CLOUD_SEC_MODEL_POC
-version: 0.0.1
+version: 10.0.0
 modules:
 - name: HANA_CLOUD_SEC_MODEL_POC
   type: hdb
@@ -9,6 +9,11 @@ modules:
   - name: hdi_HANA_CLOUD_SEC_MODEL_POC
     properties:
       TARGET_CONTAINER: ~{hdi-container-name}
+  - name: cross-container-service-1
+    group: SERVICE_REPLACEMENTS
+    properties:
+      key: ServiceName_1
+      service: ~{the-service-name}
 resources:
 - name: hdi_HANA_CLOUD_SEC_MODEL_POC
   type: com.sap.xs.hdi-container
@@ -17,3 +22,9 @@ resources:
       schema: HANA_CLOUD_SEC_MODEL_POC
   properties:
     hdi-container-name: ${service-name}
+- name: cross-container-service-1
+  type: org.cloudfoundry.existing-service
+  parameters:
+    service-name: SEC_SPACE_UPS_G
+  properties:
+    the-service-name: ${service-name}
